@@ -14,6 +14,7 @@ COM_MAILTO_EMAIL_NOT_SENT="Email could not be sent."
 COM_MAILTO_EMAIL_SENT="Email was sent successfully."
 COM_MAILTO_EMAIL_TO="Email to"
 COM_MAILTO_EMAIL_TO_A_FRIEND="Email this link to a friend."
+COM_MAILTO_LINK_IS_MISSING="Link is missing"
 COM_MAILTO_SEND="Send"
 COM_MAILTO_SENDER="Sender"
 COM_MAILTO_SENT_BY="Item sent by"
