@@ -300,7 +300,7 @@ abstract class JModel extends JObject
 		if (empty($name)) {
 			$r = null;
 			if (!preg_match('/Model(.*)/i', get_class($this), $r)) {
-				JError::raiseError (500, 'JLIB_APPLICATION_ERROR_MODEL_GET_NAME');
+				JError::raiseError (500, JText::_('JLIB_APPLICATION_ERROR_MODEL_GET_NAME'));
 			}
 			$name = strtolower($r[1]);
 		}
