@@ -10,10 +10,11 @@ COM_MAILTO_CLOSE_WINDOW="Close Window"
 COM_MAILTO_EMAIL_ERR_NOINFO="Please provide a valid email address."
 COM_MAILTO_EMAIL_INVALID="The address '%s' does not appear to be a valid email address."
 COM_MAILTO_EMAIL_MSG="This is an email from (%s) sent by %s (%s). You may also find the following link interesting: %s"
-COM_MAILTO_EMAIL_NOT_SENT="email could not be sent."
+COM_MAILTO_EMAIL_NOT_SENT="Email could not be sent."
 COM_MAILTO_EMAIL_SENT="Email was sent successfully."
 COM_MAILTO_EMAIL_TO="Email to"
-COM_MAILTO_EMAIL_TO_A_FRIEND="email this link to a friend."
+COM_MAILTO_EMAIL_TO_A_FRIEND="Email this link to a friend."
+COM_MAILTO_LINK_IS_MISSING="Link is missing"
 COM_MAILTO_SEND="Send"
 COM_MAILTO_SENDER="Sender"
 COM_MAILTO_SENT_BY="Item sent by"
